# mini-game-for-oracle

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  ORACLE.md  README.md  TEXTURES.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py
backend/api/: routes_game.py  routes_health.py  routes_oracle.py  routes_ws.py
backend/db/: connection.py  oracle_object_repository.py  schema.sql  seed.sql
backend/models/: __init__.py  game.py
frontend/: index.html
frontend/src/: main.js
frontend/src/game/: api.js  assets.js  constants.js  gameState.js  input.js  minimap.js  player.js  quests.js  renderer.js  websocket.js
frontend/styles/: main.css
scripts/: build_hatch_pet_mascot.py  generate_concept_assets.py  generate_gifs.py  generate_mining_animation.py  generate_world_map.py  process_assets.py
tests/: test_api.py  test_assets.py  test_lessons.py  test_oracle_sql.py  test_repository.py
