[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-object-adventure"
version = "0.1.0"
description = "A multiplayer Canvas sandbox game backed by Oracle Object types."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "oracledb>=2.5,<4",
  "pillow>=10,<13",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]

[tool.setuptools]
packages = ["backend", "backend.api", "backend.db", "backend.models"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
